0032661: Coding - Forward class declaration in ProjLib collides with typeref

Removed redundant forward declarations from ProjLib.hxx.